# uma_prediction

./: .gitignore  README.md  adjust_csv.py  analyze.py  app.py  commit_message.txt  download_models.py  download_params.py  pyproject.toml  requirements.txt  run.py  scraping_detail.py  scraping_merged_netkeiba.py  scraping_outline.py  scraping_speed_index.py  upload_dataset_to_hf.py  upload_models_to_hf.py
scripts/: predict_ensemble.py  predict_latest_race.py  predict_manual_input.py
scripts/analysis/: analyze.py  optimize_value_threshold.py
scripts/data_acquisition/: debug_scraper.py  main_scraper.py  scraping_odds.py  scraping_outline.py  scraping_speed_index.py  scraping_util.py
scripts/data_preprocessing/: lgbm_categorical_processor.py
scripts/model_training/: fine_tune.py  optimize.py  train.py  train_colab.ipynb  train_colab.py  training_utils.py
scripts/prediction_utils/: betting_slip_generator.py  constants.py  data_preprocessor.py  ensembler.py  model_loader.py  predictor.py  scraper.py  value_betting.py
