[project]
name = "uma-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "datasets>=4.0.0",
    "hf-xet>=1.1.5",
    "html5lib>=1.1",
    "huggingface-hub>=0.33.2",
    "lightgbm>=4.6.0",
    "lxml>=6.0.0",
    "numpy>2.0.0",
    "optuna>=4.4.0",
    "optuna-integration>=4.4.0",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn==1.6.1",
    "streamlit>=1.46.1",
    "tensorflow>=2.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "poethepoet>=0.36.0",
]

[tool.poe.tasks]
scrape_race_outline = "python -m scripts.data_acquisition.scraping_outline"
scrape_race_detail = "python -m scripts.data_acquisition.main_scraper"
scrape_speed_index = "python -m scripts.data_acquisition.scraping_speed_index"
optimize = "python -m scripts.model_training.optimize"
train_lgbm_optimized = "python -m scripts.model_training.train --model_type lgbm --params_file params/best_params_lgbm.json"
train_rf_optimized = "python -m scripts.model_training.train --model_type rf --params_file params/best_params_rf.json"
train_cnn_optimized = "python -m scripts.model_training.train --model_type cnn --params_file params/best_params_cnn.json"
train_all_optimized = ["train_rf_optimized", "train_lgbm_optimized", "train_cnn_optimized"]
fine_tune_lgbm = "python -m scripts.model_training.fine_tune --model_type lgbm --target_mode default --base_model_path models/lgbm_uma_prediction_model_default.txt --filter_place 東京"
fine_tune_rf = "python -m scripts.model_training.fine_tune --model_type rf --target_mode default --base_model_path models/rf_uma_prediction_model_default.pkl --filter_place 東京"
fine_tune_cnn = "python -m scripts.model_training.fine_tune --model_type cnn --target_mode default --base_model_path models/cnn_uma_prediction_model_default_with_cat.keras --filter_place 東京"
fine_tune_all = ["fine_tune_lgbm", "fine_tune_rf", "fine_tune_cnn"]
predict = "python -m scripts.predict_ensemble https://race.netkeiba.com/race/shutuba.html?race_id=202510020811"
